--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,9 +48,9 @@ spring.cache.type=simple
 #Mysql属性配置文件,Spring-boot系统配置
 spring.application.name=jpa-demo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://211.81.51.136:1234/blog_db?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
-spring.datasource.username=helun
-spring.datasource.password=helun520
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blog_db?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+spring.datasource.username=test
+spring.datasource.password=test@123
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.idle-timeout=30000
